# SFT

./: README.md  SPEC.md  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: detection.rs  mod.rs  project_type.rs  registry.rs
src-tauri/src/graph/: mod.rs
src-tauri/src/models/: mod.rs  parse_result.rs  source_file.rs  unified_edge.rs  unified_graph.rs  unified_node.rs
src-tauri/src/parsers/: mod.rs  traits.rs
src-tauri/src/parsers/common/: file_utils.rs  hash.rs  mod.rs
src-tauri/src/parsers/delphi/: dfm_parser.rs  mod.rs  parser.rs  pas_parser.rs
src-tauri/src/parsers/laravel/: blade_parser.rs  controller_parser.rs  inertia_parser.rs  migration_parser.rs  mod.rs  model_parser.rs  parser.rs  php_parser.rs  route_parser.rs
src-tauri/src/storage/: mod.rs
src/components/graph/: Graph3D.tsx
src/components/layout/: FloatingUI.tsx  Header.tsx  Sidebar.tsx  StatusBar.tsx
src/lib/: tauri.ts
src/store/: graphStore.ts  projectStore.ts  settingsStore.ts
src/types/: unified.ts
