[package]
name = "devwaresoft"
version = "2.0.0"
description = "Dependency analyzer for multi-language projects with 3D visualization"
authors = ["DevpWareSoft"]
edition = "2021"

[lib]
name = "devwaresoft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# File system
walkdir = "2"
regex = "1"
zip = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
thiserror = "2"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"

